# cli_rpg

./: .gitignore  architecture.xml  engine_class_diagrams.xml  pyproject.toml
engine/contexts/: context.py  dialogue_context.py  game_context.py  inventory_context.py  map_context.py  open_container_context.py  popup_context.py
engine/creatures/: creature.py
engine/interactions/: effect.py
engine/objects/: equipment.py  equipment_loadout.py  inventory.py  item.py  item_container.py
engine/utils/: choice_handler.py  dialogue_tree.py  location_tree.py  roll.py
resources/: sample_map.json
test/fixtures/: location_tree.py
test/test_utils/: test_location_tree.py
