[tool.poetry]
name = "cli-rpg"
version = "0.1.0"
description = ""
authors = ["asaphho"]
readme = "README.md"
packages = [{include = "cli_rpg"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
